grammar.js
    source_file: ($) => repeat($._pelt),

    // Comment rule
    _pelt: ($) =>
      choice(
        $.pragma,
        $.incld,
        $.mdefn,
        $.idecl,
        $.xdecl,
        $.ldecl,
        $.lconstructor,
        $.cdefn,
        $.wdecl,
        $.ecdecl,
        $.struct,
        $.enumdef,
        $.type_alias_declaration,
      ),

    // Pragma rules
    //
    // pragma →	pragma id version-expr ;
    gparams: ($) => seq("<", commaSep1(field("gparam", $.generic_param)), ">"),

    // Generic-parameter (generic-param)
    //
    // generic-param → # tvar-name
    //               → tvar-name
    generic_param: ($) => choice(seq("#", $.tvar_name), $.tvar_name),

    // Import-declaration (idecl)
    //
    // idecl → import selection^opt import-name gargs^opt prefix^opt ;
    export: ($) => "export",

    // Sealed-modifier (sealed)
    //
    // sealed → sealed
    type_alias_declaration: ($) => seq(
      optional(field("export", $.export)),
      optional(field("nominal", "new")),
      "type",
      field("name", $.type_name),
      optional(field("gparams", $.gparams)),
      "=",
      field("type", $.type),
      ";",
    ),

    // Type-name (type-name)
    type_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,

    // Argument (arg)
    //
    // arg → id : type
    type: ($) =>
      choice(
        $.tref,
        "Boolean",
        "Field",
        $.uint_type,
        $.bytes_type,
        $.opaque_type,
        $.vector_type,
        seq("[", commaSep($.type), "]"),
      ),

    uint_type: ($) => seq("Uint", "<", field("tsize", $.tsize), optional(seq("..", field("tsize", $.tsize))), ">"),
    bytes_type: ($) => seq("Bytes", "<", field("tsize", $.tsize), ">"),
    opaque_type: ($) => seq("Opaque", "<", $.str, ">"),
    vector_type: ($) => seq("Vector", "<", field("tsize", $.tsize), ",", field("type", $.type), ">"),

    // Type-reference (tref)
    //
    // tref → id gargs^opt
    tref: ($) => prec.left(seq(field("id", $.id), optional(field("gargs", $.gargs)))),

    // Type-size (tsize)
    //
    // tsize → nat
    //       → id
    tsize: ($) => choice($.nat, $.id),

    // Generic-argument (garg)
    //
    // garg → nat
    //      → type
    id: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    tvar_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,

    // field-literal (nat)
    //
    // a field literal is 0 or a natural number formed from a sequence
    // of digits starting with 1-9, hex (0x), octal (0o), or binary (0b)
    nat: ($) => choice("0", /[1-9][0-9]*/, /0[xX][0-9a-fA-F]+/, /0[oO][0-7]+/, /0[bB][01]+/),

    // string-literal (str, file)
    //
    // supports both double-quoted and single-quoted strings
    str: ($) => token(choice(/"([^"\\]|\\.)*"/, /'([^'\\]|\\.)*'/)),
